--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ mysqlclient = "*"
 djangorestframework = "*"
 django-filter = "*"
 djangorestframework-simplejwt = "*"
+django-cors-headers = "*"
 
 [dev-packages]
 
