--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,10 @@ djangorestframework = "*"
 django-filter = "*"
 djangorestframework-simplejwt = "*"
 django-cors-headers = "*"
+pillow = "*"
+django-computedfields = "*"
+django-mysql = "*"
+drf-nested-routers = "*"
 
 [dev-packages]
 
