--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ django-mysql = "*"
 drf-nested-routers = "*"
 djoser = "*"
 drf-writable-nested = "*"
+django-templated-mail = "*"
 
 [dev-packages]
 
